--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>808080</title>
-    <p>
-    	808080 is the space that we all inhabit, between past and future, fortune and tragedy.
-It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going. 
-808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. 
-808080 is about existing in the light, the dark, and navigating through the gray.
-    </p>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>title</title>
+  <meta name="author" content="name">
+  <meta name="description" content="description here">
+  <meta name="keywords" content="keywords,here">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+  <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
   </head>
   <body>
-  
+  <h1>808080</h1>
+  <div>
+    <p>
+    	808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
+<p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
+<p>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </p>
+<p>808080 is about existing in the light, the dark, and navigating through the gray.
+    </p>
+</div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+   function autorun()
+   {
+    
+   }
+   if (window.addEventListener) window.addEventListener("load", autorun, false);
+   else if (window.attachEvent) window.attachEvent("onload", autorun);
+   else window.onload = autorun;
+  </script>
   </body>
 </html>
