--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
   </head>
   <body>
   <h1>808080</h1>
-  <div class="wrapper">
-  	
+  <div class="container">
+  	<div class="row"></div>
+  	<div class="col"></div>
+  	<div class="col">
     <p>
     	808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
 <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
 <p>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </p>
 <p>808080 is about existing in the light, the dark, and navigating through the gray.
     </p>
+</div>
+</div>
+<div class="col"></div>
 </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript">
