--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
   </head>
   <body>
-  <h1>808080</h1>
+  
   <div class="container">
+  	<h1>808080</h1>
   	<div class="row"></div>
-  	<div class="col"></div>
-  	<div class="col">
+  	<div class="col-3"></div>
+  	<div class="col-6">
     <p>
     	808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
 <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
@@ -27,7 +28,7 @@
     </p>
 </div>
 </div>
-<div class="col"></div>
+<div class="col-3"></div>
 </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript">
