--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="container">
       <h1>808080</h1>
       <div class="row"></div>
-      <div class="col-3"></div>
+      <div class="col-3">
+        <img src="img/SVG/sayItAgain.svg" />
+      </div>
       <div class="col-6">
         <p>
         808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
