--- a/index.html
+++ b/index.html
@@ -15,20 +15,29 @@
   <body>
     
     <div class="container">
-      <h1>808080</h1>
-      <div class="row"></div>
-      <div class="col-3">
-        <img src="img/SVG/sayItAgain.svg" />
+      <div class="row">
+        <div class="col-3">
+          <img src="img/SVG/sayItAgain.svg" />
+        </div>
+        <div class="col-6">
+          <img src="img/SVG/rollo.svg" />
+        </div>
+        <div class="col-3"></div>
       </div>
-      <div class="col-6">
-        <p>
-        808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
-        <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
-        <p>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </p>
-        <p>808080 is about existing in the light, the dark, and navigating through the gray.
-        </p>
-      </div> 
-      <div class="col-3"></div>
+      <div class="row">
+        <div class="col-3">
+          <img src="img/SVG/sayItAgain.svg" />
+        </div>
+        <div class="col-6">
+          <p>
+          808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
+          <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
+          <p>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </p>
+          <p>808080 is about existing in the light, the dark, and navigating through the gray.
+          </p>
+        </div>
+        <div class="col-3"></div>
+      </div>
     </div>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
