--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
   <body>
     
     <div class="container">
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-3">
-          <img src="img/SVG/sayItAgain.svg" />
         </div>
         <div class="col-6">
           <img src="img/SVG/rollo.svg" />
         </div>
         <div class="col-3"></div>
       </div>
-      <div class="row">
+      <div class="row mt-3">
         <div class="col-3">
           <img src="img/SVG/sayItAgain.svg" />
         </div>
