--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="col-3">
         </div>
         <div class="col-6">
-          <img src="img/SVG/rollo.svg" />
+          <img src="img/jrollo_finallogo.svg" />
         </div>
         <div class="col-3"></div>
       </div>
