--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
+    <title>tomorrow's problems, today!</title>
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
@@ -15,19 +15,11 @@
   <body>
     
     <div class="container">
-      <div class="row mt-2">
-        <div class="col-3">
-        </div>
-        <div class="col-6">
-          <img src="img/jrollo_finallogo.svg" />
-        </div>
-        <div class="col-3"></div>
-      </div>
-      <div class="row mt-3">
-        <div class="col-3">
+      <div class="row mt-sm-3">
+        <div class="col-sm-4 mx-auto">
           <img src="img/SVG/sayItAgain.svg" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-4 mx-auto">
           <p>
           808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
           <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
@@ -35,7 +27,9 @@
           <p>808080 is about existing in the light, the dark, and navigating through the gray.
           </p>
         </div>
-        <div class="col-3"></div>
+        <div class="col-sm-4 mx-auto">
+          <img src="img/SVG/volk.svg" />
+        </div>
       </div>
     </div>
   </div>
