--- a/index.html
+++ b/index.html
@@ -1,63 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>tomorrow's problems, today!</title>
-    <meta name="author" content="name">
-    <meta name="description" content="description here">
-    <meta name="keywords" content="keywords,here">
-    <link rel="icon" href="icon.jpg">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-  </head>
-  <body>
 
-    <div class="container">
-      <div class="row mt-sm-4">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>tomorrow's problems, today!</title>
+  <meta name="author" content="name">
+  <meta name="description" content="description here">
+  <meta name="keywords" content="keywords,here">
+  <link rel="icon" href="icon.jpg">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+</head>
 
-        <div class="col-sm-12 mx-auto mains"></div>
+<body>
+  <video autoplay loop id="video-background" muted plays-inline>
+    <source src="../img/aniBoy.mp4" type="video/mp4">
+  </video>
+  <div class="container">
+    <div class="row mt-sm-4">
 
-      </div>
-      <div class="row mt-sm-4">
-        <div class="col-sm-4 mx-auto "></div>
-        <div class="col-sm-4 mx-auto">
-          <div class="mission">
-            <p>
-            808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
-            <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
-            <p>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </p>
-            <p>808080 is about existing in the light, the dark, and navigating through the gray.
-            </p>
-          </div>
-
-        </div>
-        <div class="col-sm-4"></div>
-      </div>
-      <div class="row mt-sm-4">
-
-        <div class="col-sm-12 mx-auto last">
-
-        </div>
-
-
+      <div class="col-sm-12 mx-auto mains">
       </div>
 
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-    function autorun()
-    {
+    <div class="row mt-sm-4">
+      <div class="col-sm-4 mx-auto "></div>
+      <div class="col-sm-4 mx-auto">
+        <div class="mission">
+          <p>
+            808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
+          <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
+          <p>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </p>
+          <p>808080 is about existing in the light, the dark, and navigating through the gray.
+          </p>
+        </div>
+
+      </div>
+      <div class="col-sm-4"></div>
+    </div>
+    <div class="row mt-sm-4">
+
+      <div class="col-sm-12 mx-auto last">
+
+      </div>
+
+
+    </div>
+
+  </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    function autorun() {
 
     }
     if (window.addEventListener) window.addEventListener("load", autorun, false);
     else if (window.attachEvent) window.attachEvent("onload", autorun);
     else window.onload = autorun;
-    </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
 </html>
