--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 </head>
 
 <body>
-  <video autoplay loop id="video-background" muted plays-inline>
-    <source src="../img/aniBoy.mp4" type="video/mp4">
-  </video>
+
   <div class="container">
     <div class="row mt-sm-4">
 
       <div class="col-sm-12 mx-auto mains">
+        <video autoplay loop id="video-background" muted plays-inline>
+          <source src="img/aniBoy.mp4" type="video/mp4">
+        </video>
       </div>
 
     </div>
