--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 </head>
 
 <body>
-
+  <video autoplay id="video-background" muted plays-inline>
+    <source src="img/aniBoy.mp4" type="video/mp4">
+  </video>
   <div class="container">
+
     <div class="row mt-sm-4">
 
       <div class="col-sm-12 mx-auto mains">
-        <video autoplay loop id="video-background" muted plays-inline>
-          <source src="img/aniBoy.mp4" type="video/mp4">
-        </video>
+
       </div>
 
     </div>
     <div class="row mt-sm-4">
-      <div class="col-sm-4 mx-auto "></div>
-      <div class="col-sm-4 mx-auto">
+      <div class="col-sm-4 mx-auto ">
         <div class="mission">
           <p>
             808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
@@ -38,6 +38,9 @@
           <p>808080 is about existing in the light, the dark, and navigating through the gray.
           </p>
         </div>
+      </div>
+      <div class="col-sm-4 mx-auto">
+
 
       </div>
       <div class="col-sm-4"></div>
