--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 </head>
 
 <body>
+  <!--<section>
   <video autoplay id="video-background" muted plays-inline>
     <source src="img/aniBoy.mp4" type="video/mp4">
   </video>
-  <div class="container">
+
+  </section>-->
+  <div class="container-fluid">
 
     <div class="row mt-sm-4">
 
