--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
 </head>
 
 <body>
-  <video autoplay id="video-background" muted plays-inline>
-    <source src="img/aniBoy.mp4" type="video/mp4">
-  </video>
-  <div class="container">
+  <div class="container-fluid">
 
-    <div class="row mt-sm-4">
+    <div class="row aniBack">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-8 mx-auto mains">
 
-      <div class="col-sm-12 mx-auto mains">
 
       </div>
+      <div class="col-sm-2"></div>
 
     </div>
     <div class="row mt-sm-4">
