--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
         </div>
         <div class="col-md-3"></div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-12 mx-auto ">
-        </div>
-        <div class="col-md-4 mx-auto">
-        </div>
-        <div class="col-md-4 col-12 last"></div>
-      </div>
     </div>
     <div class="rollo">
       <div class="container">
@@ -51,6 +44,13 @@
         </div>
       </div>
     </div>
+  <!--   <div class="row">
+      <div class="col-md-4 col-12 mx-auto ">
+      </div>
+      <div class="col-md-4 mx-auto">
+      </div>
+      <div class="col-md-4 col-12 last"></div>
+    </div> -->
     <div class="container">
       <div class="row mx-auto mission">
         
