--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="col-md-4 col-12 last"></div>
     </div> -->
     <div class="container">
-      <div class="row mx-auto mission">
+      <div class="row mx-auto">
         
         <div class="col-12">
           <div id="instagram-feed-demo" class="instagram_feed"></div>
@@ -64,15 +64,10 @@
   <script src="js/insta/jquery.instagramFeed.min.js" type="text/javascript"></script>
   <script>
     $(window).on('load', function(){
-2
   $.instagramFeed({
-3
     'username': '80.eighty.80',
-4
     'container': "#instagram-feed-demo"
-5
   });
-6
 });
 
   </script>
