--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="js/insta/jquery.instagramFeed.min.js" type="text/javascript"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="js/insta/jquery.instagramFeed.js" type="text/javascript"></script>
   <script>
     $(window).on('load', function(){
   $.instagramFeed({
