--- a/index.html
+++ b/index.html
@@ -24,23 +24,30 @@
       </div>
     </div>
     <div class="rollo">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row mx-auto mission">
           
-          <div class="col-12 col-md-3">
+          <div class="col-12 col-md-3 align-middle">
             <h2>
             808080 is the space that we all inhabit, between past and future, fortune and tragedy.</h2>
           </div>
-          <div class="col-12 col-md-3 offset-md-3">
+        </div>
+        <div class="row mx-auto mission">
+          <div class="col-12 col-md-3 offset-md-3 align-middle">
             <h2>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</h2>
           </div>
-          <div class="col-12 col-md-3 offset-md-6">
+        </div>
+          <div class="row mx-auto mission">
+          <div class="col-12 col-md-3 offset-md-6 align-middle">
             <h2>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </h2>
           </div>
-          <div class="col-12 col-md-3 offset-md-9">
+        </div>
+        <div class="row mx-auto mission">
+          <div class="col-12 col-md-3 offset-md-9 align-middle">
             <h2>808080 is about existing in the light, the dark, and navigating through the gray.
             </h2>
           </div>
+        </div>
         </div>
       </div>
     </div>
@@ -52,10 +59,10 @@
       <div class="col-md-4 col-12 last"></div>
     </div> -->
     <div class="container">
-      <div class="row mx-auto">
+      <div class="row mx-auto mt-4">
         
         <div class="col-12">
-          <div id="instagram-feed-demo" class="instagram_feed"></div>
+          <div id="ig-feed" class="instagram_feed"></div>
         </div>
       </div>
     </div>
@@ -69,7 +76,7 @@
     $(window).on('load', function(){
   $.instagramFeed({
     'username': '80.eighty.80',
-    'container': "#instagram-feed-demo"
+    'container': "#ig-feed"
   });
 });
 
