--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
         <div class="row mx-auto mission">
           
           <div class="col-12 col-md-3 align-middle">
-            <h2>
-            808080 is the space that we all inhabit, between past and future, fortune and tragedy.</h2>
+            <p>
+            808080 is the space that we all inhabit, between past and future, fortune and tragedy.</p>
           </div>
         </div>
         <div class="row mx-auto mission">
           <div class="col-12 col-md-3 offset-md-3 align-middle">
-            <h2>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</h2>
+            <p>It is an acknowledgment and reclamation of the times that we live in: in which things seem bleak and uncertain, yet there is no choice but to keep going.</p>
           </div>
         </div>
           <div class="row mx-auto mission">
           <div class="col-12 col-md-3 offset-md-6 align-middle">
-            <h2>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </h2>
+            <p>808080 is a location of uncertainty between action and inaction, positivity and negativity, optimism and pessimism. </p>
           </div>
         </div>
         <div class="row mx-auto mission">
           <div class="col-12 col-md-3 offset-md-9 align-middle">
-            <h2>808080 is about existing in the light, the dark, and navigating through the gray.
-            </h2>
+            <p>808080 is about existing in the light, the dark, and navigating through the gray.
+            </p>
           </div>
         </div>
         </div>
